--- a/EcommerceWebsite/src/main/webapp/template/web/css/style.css
+++ b/EcommerceWebsite/src/main/webapp/template/web/css/style.css
@@ -2140,3 +2140,66 @@ var
   opacity: 1;
   visibility: visible;
 }
+
+
+/* comment */
+
+.comment-item {
+	margin-top: 16px;
+}
+.content-new img{
+	width:100% !important; 
+}
+.content-new{
+	text-align: justify;
+
+}
+
+
+
+
+
+ .read-more-container {
+        max-height: 300px; /* giới hạn ban đầu */
+        overflow: hidden;
+        position: relative;
+        transition: max-height 0.5s ease;
+    }
+
+    .read-more-container.expanded {
+        max-height: 10000px; /* khi mở rộng */
+    }
+
+    .read-more-toggle {
+        display: inline-block;
+        margin-top: 10px;
+        color: #007bff;
+        cursor: pointer;
+    }
+
+    .read-more-overlay {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 60px;
+        background: linear-gradient(to top, white, transparent);
+        pointer-events: none;
+    }
+
+    .read-more-container.expanded .read-more-overlay {
+        display: none;
+    }
+    
+    #toggleReadMore{
+    display: inline-block;
+    padding: 5px 15px;
+    color: #000; */
+    cursor: pointer;
+    font-size: 18px; */
+     font-weight: 600; */
+    border: 1px solid #000; */
+    border-radius: 30px;
+    background-color: #fff;
+    transition: 0.3s all;
+    }
